--- a/index.html
+++ b/index.html
@@ -3,45 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nishanth studies</title>
+    <title>Nishanth Studies</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans+Narrow:wght@400;700&display=swap');
+            </style>
     <link rel="stylesheet" href="indexx.css">
 </head>
 <body>
-    <h1>STUDY TOOL KIT</h1>
-    <hr>
-    <div class="marquee">every element of this website is protected by copyright law</div>
-    <h3>Unlock your potential with the power of knowledge! This is very useful to the students to study</h3>
-    <div class="science">
-        <img src="/equiments/106ffb9a99ffefe0b7ed246d8cb4462f.jpg" alt="Science Equipment">
-        <a class="move" href="science.html">MOVE TO SCIENCE</a>
-    </div>
-    <div class="commerce">
-     <img src="/equiments/commerce-bulb-word-cloud-business-260nw-343225730.jpg" alt="">
-     <a href="commerce.html">MOVE TO COMMERCE</a>
-    </div>
-    <div>
-        <h3 style="color:black; background-color: black;"><u>Step-by-step guide on how to use a zip file on your mobile device:-</u></h3>
-    <br>
-    <p>
-    <h4 style="color: black;">if the commerce section it become zoom you zoom out</h4>
-    <h4 style="color:black">1. Click on the download button for your desired subject.</h4>
-    <h4 style="color: black;">2.You'll be redirected to the Google Drive download box.</h4>
-    <h4 style="color:black;">3.At the top of the box, locate and click on the download button.</h4>
-    <h4 style="color:black;">4.The download will initiate automatically, saving a zip file containing the study materials to your file manager.</h4>
-    <H4 style="color: black;">5.If you haven't already, download the ZArchiver app or RAR app from the Play Store or App Store.</H4>
-    <H4 style="color: black;">6.Open the ZArchiver app, navigate to the search bar, and enter the name of the respective zip file with its file extension (e.g., Kannada.rar).</H5> 
-    <H4 style="color: black;">7.Select the file and choose the option to extract it.</H4>
-    <H4 style="color: black;">8.Choose an empty folder for extraction.</H4>  
-    <H4 style="color: black;">9.Once the zip file is extracted, you can access the individual PDF files within.</H4>
-    <H4 style="color:black;">If you have any inquiries, please feel free to contact us at instagram <mark>happy_nishu</mark> or  <mark>codingofficial8@gmail.com</mark></H4>
-    <h2 style="color:black;">i hope this is very usefull to you </h2>
-    
-    </div>
-    <div>
-        <h1 style="border: 2PX; background-color:rgb(171, 97, 6) ; border-style: solid;">IMPORANT TO EVERYONE</h1>
-        <P>ECONOMICS AND ACCOUNTANCY ONLY IMPORTANT QUESTIONS SO KEEP THIS FOR YOUR REFERANCE</P>
-    </div>
-    <h1 style="color: black;"><center><u><i>THANK YOU</i></u></center></h1>
+
+    <!-- Header Section -->
+    <header>
+        <h1 class="stk">Study Tool Kit</h1>
+        <p>Brought you by NISHANTH P</p>
+    </header>
+
+    <!-- Main Content Section -->
+    <main>
+        <section class="intro">
+            <h3>Unlock your potential with the power of knowledge! This website is a useful tool for students to study.</h3>
+        </section>
+
+        <!-- Science Section -->
+        <section class="section science">
+            <img class="frontimg" src="/sciencefront.jpg" alt="Science Equipment" height="20px">
+            <a class="move" href="science.html">Move to Science</a>
+        </section>
+
+        <!-- Commerce Section -->
+        <section class="section commerce">
+            <img class="frontimg" src="/Commerce.jpg" alt="Commerce Word Cloud" height="20px">
+            <a class="move" href="commerce.html">Move to Commerce</a>
+        </section>
+
+        <!-- Guide Section -->
+        <section class="guide">
+            <h3>Step-by-step guide on how to use a zip file on your mobile device:</h3>
+            <ol>
+                <li>Click on the download button for your desired subject.</li>
+                <li>You'll be redirected to the Google Drive download box.</li>
+                <li>At the top of the box, locate and click on the download button.</li>
+                <li>The download will initiate automatically, saving a zip file containing the study materials to your file manager.</li>
+                <li>If you haven't already, download the ZArchiver or RAR app from the Play Store or App Store.</li>
+                <li>Open the ZArchiver app, navigate to the search bar, and enter the name of the zip file (e.g., Kannada.rar).</li>
+                <li>Select the file and choose the option to extract it.</li>
+                <li>Choose an empty folder for extraction.</li>
+                <li>Once the zip file is extracted, you can access the individual PDF files.</li>
+            </ol>
+            <p>If you have any inquiries, feel free to contact us at Instagram <a class="none" href="https://www.instagram.com/happy__nishu_/?utm_source=ig_web_button_share_sheet" target="_blank">happy_nishu</a> or at <a href="mailto:codingofficial8@gmail.com">codingofficial8@gmail.com</a>.</p>
+        </section>
+
+        <!-- Important Section -->
+        <section class="important">
+            <h1>Important to Everyone</h1>
+            <p>Economics and Accountancy: Only important questions. Keep this for your reference.</p>
+        </section>
+
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Science Resources. All Rights Reserved.</p>
+    </footer>
 
 </body>
 </html>
